Added css for ProfileUpdate

--- a/src/pages/ProfileUpdate/ProfileUpdate.css
+++ b/src/pages/ProfileUpdate/ProfileUpdate.css
@@ -3,10 +3,26 @@
   background: url(/background.png) no-repeat;
   background-size: cover;
   display: flex;
-  align-items: centre;
+  align-items: center;
   justify-content: center;
 }
-.profil form {
+
+.profile-container {
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-width: 700px;
+  border-radius: 10px;
+}
+
+.profile-pic {
+  max-width: 160px;
+  aspect-ratio: 1/1;
+  margin: 20px auto;
+  border-radius: 50%;
+}
+.profile form {
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -29,7 +45,7 @@
   aspect-ratio: 1/1;
   border-radius: 50%;
 }
-.profil input,
+.profile input,
 textarea {
   padding: 10px;
   min-width: 300px;
